@@ -567,7 +567,13 @@ UINT CCommitDlg::StatusThread()
 	if (m_History.GetCount()==0)
 	{
 		CString reg;
-		reg.Format(_T("Software\\TortoiseSVN\\History\\commit%s"), (LPCTSTR)m_ListCtrl.m_sUUID);
+		if (m_ListCtrl.m_sUUID.IsEmpty())
+		{
+			SVN svn;
+			reg.Format(_T("Software\\TortoiseSVN\\History\\commit%s"), (LPCTSTR)svn.GetUUIDFromPath(m_pathList[0]));
+		}
+		else
+			reg.Format(_T("Software\\TortoiseSVN\\History\\commit%s"), (LPCTSTR)m_ListCtrl.m_sUUID);
 		m_History.Load(reg, _T("logmsgs"));
 	}
 
